modified html file

--- a/index.html
+++ b/index.html
@@ -3,10 +3,19 @@
   <head>
     <meta charset="utf-8">
     <title>
-Welcome to HTML
+Welcome to HTML!
     </title>
   </head>
   <body>
-  This is how HTML works  
+  This is how HTML works.
   </body>
 </html>
+
+<h1> Welcome to Html </h1>
+<h2> The first Web page </h2>
+<p> This is my first web page. </p>
+<p> This is <em>exciting</em> and interesting. <<strong> Warning </strong> The level of excitement
+can be very threatening.</p>
+
+<h1> HTML: Section 2 </h1>
+<p> This is the next section of the web page. </p>
