--- a/index.html
+++ b/index.html
@@ -14,8 +14,19 @@ Welcome to HTML!
 <h1> Welcome to Html </h1>
 <h2> The first Web page </h2>
 <p> This is my first web page. </p>
-<p> This is <em>exciting</em> and interesting. <<strong> Warning </strong> The level of excitement
+<p> This is <em>exciting</em> and interesting. <strong> Warning: </strong> The level of excitement
 can be very threatening.</p>
 
 <h1> HTML: Section 2 </h1>
 <p> This is the next section of the web page. </p>
+<ol>
+  Achievements
+  Video Game Top Players
+  Tournaments
+</ol>
+<ul>
+News
+Trash
+</ul>
+<li> Events </li>
+<li> <a href="https://openlab.citytech.cuny.edu/"> This is the link to Openlab </a> </li>
