added and fixed index file

--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@ Welcome to HTML!
   </head>
   <body>
   This is how HTML works.
-<h1> Welcome to Html</h1>
+<h1 class="spotlight"> Welcome to Html </h1>
 <h2> The first Web page </h2>
-<p> This is my first web page. </p>
+<div id="intro">
+  <p> This is my first web page. </p>
+</div>
 <p> This is <em>exciting</em> and interesting. <strong> Warning: </strong> The level of excitement
 can be very threatening.</p>
 
