Add to index2.html

--- a/index2.html
+++ b/index2.html
@@ -1,1 +1,19 @@
+<!DOCTYPE html>
+<html>
+<head>
+ <title> Welcome to Lab-08-Remote </title>
+</head>
+<body>
 My GitHub Page
+<h1> Lab-08-Remote </h1>
+<ol>
+   <li> <a href="file:///C:/Users/Quincy/Desktop/myname/Lab-07-Part1-HTML/index2.html"> 
+Home </a> </li>
+   <li> <a href="http://octodex.github.com/"> Octocat </a> </li>
+   <li> <a href="http://unicodesnowmanforyou.com/"> Snowman </a> </li>
+   <li> <a href="about.html"> About </a> </li>
+   <li> <a href="practice.html"> Practice </a> </li>
+</ol> 
+</body>
+</html>
+
