--- a/index2.html
+++ b/index2.html
@@ -13,7 +13,19 @@ Home </a> </li>
    <li> <a href="http://unicodesnowmanforyou.com/"> Snowman </a> </li>
    <li> <a href="about.html"> About </a> </li>
    <li> <a href="practice.html"> Practice </a> </li>
+   <li> <p>Pellentesque habitant morbi tristique senectus et netus et 
+malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat 
+vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet 
+quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat 
+eleifend leo.</p> </li>
+   <li> <ul>
+   <li>Lorem ipsum dolor sit amet, consectetuer adipiscing 
+elit.</li>
+   <li>Aliquam tincidunt mauris eu risus.</li>
+   <li>Vestibulum auctor dapibus neque.</li>
+</ul></li>
 </ol> 
 </body>
 </html>
+
 
